# AdvancedClipboard

./: CMakeLists.txt  README.md  main.cpp
include/: resource.h  update_info.h
io/github/samera2022/advanced_clipboard/: main.cpp
src/: main.cpp  resources.rc  update_info.cpp
